@@ -57,5 +57,7 @@ $route['profile'] = 'portfolio';
 $route['stock/(:any)'] = 'stock/index/$1';
 $route['stock'] = 'stock';
 
+$route['login'] = 'login/loginAttempt';//'login/loginAttempt/$1/$2';
+
 $route['404_override'] = '';
 $route['translate_uri_dashes'] = FALSE;
